--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,19 +1,20 @@
 //====================================================================================================
 .header {
     position: fixed;
-    z-index: 100;
+    z-index: 50;
     width: 100%;
     transition: all 1s ease 0s;
-    @include adaptiveValue("margin-top", 30, 10, 1);
+    @include adaptiveValue("margin-top", 20, 0, 1170, 767.98, 1);
+    padding: rem(10) 0px;
     &._header-scroll {
         margin: 0px;
-        padding: rem(10) 0px;
         background-color: $blue_01;
         box-shadow: 0px 0px rem(20) $blue_01;
     }
-    &__content {
+    &__container {
         position: relative;
         display: flex;
+        gap: rem(20);
         justify-content: space-between;
         align-items: center;
     }
@@ -24,13 +25,6 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        @media (any-hover: hover) {
-            &:hover {
-                .header__logo-text {
-                    opacity: 0.5;
-                }
-            }
-        }
     }
 
     &__image {
@@ -47,12 +41,9 @@
         line-height: math.div(25, 20);
         letter-spacing: em(-0.35, 20);
         color: $white;
-        opacity: 1;
-        transition: opacity 0.5s ease 0s;
     }
 
     &__menu {
-        margin: 0px rem(20);
     }
 
     &__profile {
@@ -62,10 +53,6 @@
         font-weight: 600;
         @media (max-width: $mobile) {
             margin-top: rem(20);
-            justify-content: start;
-        }
-        @media (max-width: $mobileSmall) {
-            justify-content: center;
         }
     }
 
@@ -77,7 +64,7 @@
         transition: opacity 0.5s ease 0s;
         @media (any-hover: hover) {
             &:hover {
-                opacity: 0.5;
+                opacity: 0.7;
             }
         }
         @media (max-width: $mobile) {
@@ -107,7 +94,7 @@
             width: 100%;
             height: 100%;
             overflow: auto;
-            transition: opacity 0.5s ease 0s;
+            transition: all 0.5s ease 0s;
             background: url("@img/bg01.png") top center no-repeat $white;
             .menu-open & {
                 visibility: visible;
@@ -162,7 +149,9 @@
         width: rem(30);
         height: rem(25);
         cursor: pointer;
-        z-index: 5;
+        z-index: 15;
+        -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+        -webkit-tap-highlight-color: transparent;
         span,
         &::before,
         &::after {
