--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -141,11 +141,11 @@ body {
 
 .page {
     &__home {
-        @include adaptiveValue("padding-bottom", 55, 40, 1170, 479.98, 1);
     }
 
     &__special {
-        @include adaptiveValue("padding-bottom", 63, 10, 1170, 479.98, 1);
+        padding-top: rem(110);
+        @include adaptiveValue("padding-bottom", 90, 40, 1170, 479.98, 1);
     }
 
     &__content {
