--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,30 +1,31 @@
 .footer {
     &__container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        min-height: rem(60);
-        @include adaptiveValue("padding-top", 20, 10, 1170, 767.98, 1);
-        @include adaptiveValue("padding-button", 17, 10, 1170, 767.98, 1);
-        @media (max-width: $mobile) {
-            flex-wrap: wrap;
-            justify-content: center;
+        @include adaptiveValue("padding-top", 20, 15, 1170, 767.98, 1);
+        @include adaptiveValue("padding-bottom", 17, 15, 1170, 767.98, 1);
+        @media (min-width: $mobile) {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            min-height: rem(60);
         }
     }
 
     &__list {
         display: flex;
         align-items: center;
-        margin: 0px rem(30);
-        li {
-            margin: 0px rem(10);
+        gap: rem(20);
+        @media (min-width: $pc) {
+            margin-left: rem(30);
         }
         @media (max-width: $mobile) {
-            flex: 1 1 100%;
             justify-content: center;
-            li {
-                margin: 0px rem(10);
-            }
+            margin-bottom: rem(10);
+        }
+        @media (max-width: $mobileSmall) {
+            column-gap: rem(10);
+            row-gap: rem(5);
+            text-align: center;
+            flex-wrap: wrap;
         }
     }
 
@@ -35,12 +36,12 @@
 
     &__copy {
         @media (max-width: $mobile) {
-            flex: 1 1 100%;
-            margin: 0;
             text-align: center;
         }
         @extend .text;
         color: $dark_02;
-        margin-right: rem(45);
+        @media (min-width: $pc) {
+            margin-right: rem(30);
+        }
     }
 }
