--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -351,44 +351,41 @@
 
 .testimonial {
     position: relative;
-    &__content {
-    }
 
     &__container {
         position: relative;
         z-index: 2;
-        @media (max-width: 650px) {
-            overflow: visible;
-        }
     }
 
     &__title {
         color: $white;
         text-align: center;
         margin: 0 auto;
-        max-width: 385px;
-        @include adaptiveValue("margin-bottom", 50, 20, 1);
+        max-width: rem(385);
+        @include adaptiveValue("margin-bottom", 50, 20, 1170, 767.98, 1);
     }
 
     &__row {
-        display: flex;
-        justify-content: center;
+        display: grid;
+        @media (min-width: $tablet) {
+            justify-content: center;
+            grid-template-columns: repeat(3, rem(300));
+            gap: rem(20);
+        }
         @media (max-width: $tablet) {
-            margin: 0px -10px;
             overflow: auto;
-            justify-content: flex-start;
+            justify-content: start;
+            gap: rem(15);
+            margin: 0px rem(-15);
+            padding: 0px rem(15);
+            grid-template-columns: repeat(3, rem(290));
         }
     }
 
-    &__column {
-        flex: 0 0 300px;
-        margin: 0px 10px;
-        @media (max-width: $tablet) {
-            margin: 0px 10px 30px 10px;
-        }
+    &__body {
     }
 
-    &__bg {
+    &__bg-ibg {
         position: absolute;
         width: 100%;
         height: 100%;
@@ -396,42 +393,36 @@
         left: 0;
     }
 }
-.column-testimonial {
-    &__body {
-        background-color: rgba(255, 255, 255, 0.2);
-        border-radius: 5px;
-        padding: 35px 20px;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        @media (max-width: $tablet) {
-            padding: 20px 10px;
-        }
+
+.body-testimonial {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: rem(5);
+    padding: rem(35) rem(20);
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    @media (max-width: $tablet) {
+        padding: rem(20) rem(10);
     }
 
     &__top {
         display: flex;
         align-items: center;
-        @include adaptiveValue("margin-bottom", 25, 15, 0);
+        @include adaptiveValue("margin-bottom", 25, 15);
     }
 
-    &__avatar {
-        flex: 0 0 50px;
+    &__avatar-ibg {
+        flex: 0 0 rem(50);
         border-radius: 50%;
-        height: 50px;
+        height: rem(50);
         overflow: hidden;
-        &_center {
-            img {
-                object-position: 25% 0;
-            }
-        }
         img {
             max-width: 100%;
         }
     }
 
     &__info {
-        @include adaptiveValue("margin-left", 20, 10, 0);
+        @include adaptiveValue("margin-left", 20, 10);
         @extend .text;
         color: $white;
     }
@@ -441,7 +432,6 @@
     }
 
     &__company {
-        font-weight: 400;
         opacity: 0.5;
     }
 
@@ -452,7 +442,8 @@
         color: $white;
         span {
             font-weight: 700;
-            font-size: 40px;
+            font-size: rem(40);
+            line-height: math.div(30, 40);
             display: block;
         }
     }
